pages/index.css
@keyframes rotateheaderbackground {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes rotaterecipesbackground {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.page {
  min-width: 1100px;
  max-width: 1600px;
  font-family: "Inter", Arial, sans-serif, "Noto Serif", "Times New Roman",
    serif;
  font-size: 16px;
  line-height: 20px;
  margin: 0 auto;
}

.header {
  display: flex;
  flex-direction: column;
  height: 100vh;
  min-height: 720px;
  max-height: 800px;
  padding: 30px 80px 40px;
  position: relative;
  box-sizing: border-box;

  background-color: #fff;
  background-image: url(../images/background_header.svg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.header__background-image {
  animation-name: rotateheaderbackground;
  animation-duration: 20s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

.nav {
  display: flex;
  justify-content: space-between;
}

.nav__logo {
  width: 105px;
  height: 39px;
  position: relative;
  left: -50px;
}

.nav__links {
  margin: 0;
  display: flex;
  align-items: flex-start;
  column-gap: 20px;
  flex-direction: row;
  list-style-type: none;
  padding: 0;
}

.nav__link {
  font-family: "Inter", Arial, sans-serif;
  color: #000;
  text-decoration: none;
  font-weight: 500;
}

.nav__link:hover {
  color: #1f69c9;
}

.header__title {
  font-family: "Inter", Arial, sans-serif;
  font-size: 60px;
  line-height: 76px;
  font-weight: 500;
  letter-spacing: -0.6px;
  margin-top: 183px;
  margin-bottom: 28px;
  max-width: 729px;
  z-index: 1;
}

.header__span-accent {
  font-family: "Noto Serif", "Times New Roman", serif;
  font-style: italic;
  font-size: 60px;
  line-height: 72px;
  color: #2f80ed;
}

.header__description {
  font-family: "Noto Serif", "Times New Roman", serif;
  font-size: 20px;
  line-height: 30px;
  margin: 0 0 0 0;
  max-width: 683px;
  z-index: 1;
}

.header__image {
  position: absolute;
  max-width: 646px;
  max-height: 568px;
  top: 124px;
  right: 5px;
}

.header__footer {
  margin-top: auto;
  width: 100%;
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  box-sizing: border-box;
  color: #6f6f6f;
}

.header__footer-paragraph {
  font-family: "Inter", Arial, sans-serif;
  font-weight: 500;
  line-height: 20px;
  margin: 0;
}

.header__address {
  margin: 0;
  align-self: flex-end;
}

.recipes {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  padding: 100px 0 215px 80px;
  color: #fff;
  margin: 0 auto;

  background-color: #0a2750;
  background-image: url(../images/background_recipes.svg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.recipes__background-image {
  animation-name: rotaterecipesbackground;
  animation-duration: 20s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

.recipes__title {
  font-family: "Inter", Arial, sans-serif;
  font-weight: 500;
  font-size: 44px;
  line-height: 52px;
  max-width: 580px;
  margin: 0;
}

.recipes__subtitle {
  font-family: "Noto Serif", "Times New Roman", serif;
  font-size: 20px;
  line-height: 30px;
  max-width: 438px;
  margin: 24px 0 80px 0;
}

.recipes__videos-iframes {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: 40px;
}

.recipes__iframe {
  border: 0px;
}

.recipes__video-caption {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: 40px;
}

.recipes__video-caption-aeropress,
.recipes__video-caption-frenchpress {
  display: inline-block;
  justify-content: space-between;
}

.reservation {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
  color: #000;

  background-color: #d9e7ff;
  background-image: url(../images/background_reservation.svg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.reservation__title {
  margin-top: 100px;
  margin-bottom: 80px;
}

.reservation__form {
  margin-bottom: 120px; /* all other styles to form class */
}

.form {
  display: flex;
  flex-direction: column;
  /* align-items: center; */
  max-width: 385px;
  width: 100%;
  border-radius: 4px;
}

.form__label {
  margin-bottom: 8px;
}

.form__button {
  border-radius: 4px;
  background-color: #2f80ed;
  color: #fff;
  opacity: 1;
  transition: opacity 0.5s ease;
}

.form__button:hover {
  opacity: 0.7;
}

.form__label-checkbox {
  display: flex;
  align-items: center;
}

.form__checkbox {
  border-radius: 2px;
  height: 20px;
  width: 20px;
  margin-right: 12px;

  background-color: #2f80ed;
  background-image: url(../images/check.svg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
}

